# SEDIMP

./: .env.example  .gitignore  README.md  docker-compose.yml
bck/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
bck/alembic/: env.py
bck/alembic/versions/: 0001_initial_auth.py  0002_improgress_domain.py  0003_municipality_metrics_seed_metadata.py  0004_expand_metric_type_codes.py  0005_rbac_users_roles_audit.py  0006_municipality_master_fields.py
bck/app/: __init__.py  main.py
bck/app/api/v1/: __init__.py  auth.py  management.py  (+10 more)
bck/app/core/: __init__.py  auth.py  config.py  exceptions.py  rate_limit.py  security.py
bck/app/db/: seed.py  session.py
bck/app/models/: __init__.py  audit_log.py  department.py  metric_type.py  metric_type_category.py  municipality.py  municipality_metric_value.py  public_screen.py  refresh_token.py  role.py  user.py
bck/app/schemas/: audit.py  auth.py  department.py  imports.py  map.py  metric_type.py  metric_type_category.py  municipality.py  public_screen.py  role.py  user.py
bck/app/services/: audit.py  auth.py  departments.py  email.py  imports.py  map_data.py  metrics.py  municipalities.py  public_screens.py  users.py
bck/docs/: municipality-metrics-seeder-plan.md
bck/scripts/: create_manager.py  seed_municipality_metrics.py
bck/tests/: conftest.py  factories.py  test_auth.py  test_improgress_endpoints.py  test_municipalities.py  test_municipality_metrics_seed.py  test_public_screens.py  test_users.py
(+27 files in other folders)
