[project]
name = "sistema-epidemiologico-bck"
version = "0.1.0"
description = "FastAPI backend service for epidemiological platform manager auth and public screen management."
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic==1.14.1",
  "email-validator==2.2.0",
  "fastapi==0.115.8",
  "psycopg[binary]==3.2.13",
  "pydantic-settings==2.7.1",
  "PyJWT==2.10.1",
  "python-multipart==0.0.20",
  "SQLAlchemy==2.0.49",
  "uvicorn[standard]==0.34.0"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "ruff==0.9.6"
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
